Added some comments

--- a/BioMath.tex
+++ b/BioMath.tex
@@ -38,6 +38,7 @@ So if we want to dive into the field of systems biology, we will have to start a
 \begin{itemize}
 	\item A \textbf{system} is a set of parts that work together and can be defined within a \textbf{boundary}. If a system can exchange material, energy or information with the outside through the boundary, it is said to be open. If the boundary does not let matter pass through it, the system is said to be closed. When the boundary is so tight that neither matter nor energy may pass through it, we say the system is isolated.
 	\item In order to predict the behavior of a system, we often need mathematics. In order to do so, we define a \textbf{mathematical model} as any mathematical representation of our system. A model does not need to be perfect. Some models only capture part of the system behavior and some model give only  approximate results.
+	% Add variables, maybe inputs and outputs too ...
 	\item When we use a model to make predictions about the behavior of a system, we are making a \textbf{simulation}. Simulations can be done with paper and pencil for very simple models, but they often must be done using a computer.
 \end{itemize}
 
